Sort result by the distance
